[tool.poetry]
name = "backend-hw7"
version = "0.1.0"
description = ""
authors = ["nurmash98"]
readme = "README.md"
packages = [{include = "backend_hw7"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
attrs = "^23.1.0"
jose = "^1.0.0"
pydantic = "^2.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
